amf-cli/shared/src/test/resources/parser-results/raml/error/invalid-fragment/fragment.raml
#%RAML 1.0 ResourceType


get:
  description: Get a param
  responses:
    200:
      body:
        application/json: